--- a/app/package.json
+++ b/app/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-navigation/native": "^6.1.8",
+    "@react-navigation/stack": "^6.3.18",
+    "axios": "^1.5.1",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.4",
+    "react-native": "0.72.5",
     "react-native-web": "~0.19.6",
-    "react-native-webview": "13.2.2",
-    "expo-updates": "~0.18.16"
+    "react-native-webview": "13.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
