--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,35 @@ Pillow==10.0.0
 pytz==2023.3
 sqlparse==0.4.4
 typing_extensions==4.7.1
+asgiref==3.7.2
+beautifulsoup4==4.12.2
+bleach==6.1.0
+certifi==2023.7.22
+channels==4.0.0
+charset-normalizer==3.2.0
+Django==3.2
+django-bootstrap4==23.2
+django-captcha==1.0.0
+django-cors-headers==4.2.0
+django-markdownfield==0.11.0
+django-ranged-response==0.2.0
+django-simple-captcha==0.5.20
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.0
+idna==3.4
+Markdown==3.5
+Pillow==10.0.0
+pygeoip==0.3.2
+PyJWT==2.8.0
+pytz==2023.3
+requests==2.31.0
+shortuuid==1.0.11
+six==1.16.0
+soupsieve==2.5
+sqlparse==0.4.4
+tinycss2==1.2.1
+typing_extensions==4.7.1
+tzdata==2023.3
+urllib3==2.0.4
+webencodings==0.5.1
+whitenoise==6.5.0
